--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
                 <h3 class="title">Happy Birthday to Linh</h3>
                 <h1 class="header ">Sức Khỏe!</h1>
                 <img src="./slider_border_light.png" width="219" height="13" style="margin: auto;" />
-                <p class="content">Với thanh xuân thật đẹp này, xin chúc em có một sức khỏe tươi mới, đầy ắp tiếng cười
+                <p class="content">Với thanh xuân thật đẹp này, chúc em có một sức khỏe tươi mới, đầy ắp tiếng cười
                     và tâm hồn ấm áp.
                     <br />
-                    Tặng niềm vui để em mãi ngọt ngào, tặng nụ cười để em mãi rạng rỡ, tặng nhiều điều
-                    tốt lành để em mãi là người thân yêu của anh nhé!
+                    Tặng em niềm vui để em mãi ngọt ngào, tặng em nụ cười để em mãi rạng rỡ!
                 </p>
                 <h3 class="title">Chúc em luôn mạnh khỏe!</h3>
             </div>
@@ -69,8 +68,8 @@
                 <h3 class="title" style="color: rgb(194, 20, 20);">Happy Birthday to Linh</h3>
                 <h1 class="header" style="color: rgb(209, 22, 22);">Anh Yêu Em</h1>
                 <img src="./slider_border_white.png" width="219" height="13" style="margin: auto;" />
-                <p class="content" style="color: black;">Anh chỉ mong được theo em trên đoạn đường còn lại để có thể dìu
-                    em khi em ngã, hạnh phúc khi được thấy em cười và bên cạnh em khi em cô đơn nhất!
+                <p class="content" style="color: black;">Anh chỉ mong được bên em trên đoạn đường còn lại để có thể dìu
+                    bước khi em ngã, hạnh phúc khi được thấy em cười và bên cạnh em khi em cô đơn nhất!
                 </p>
                 <h3 class="title" style="color: rgb(194, 20, 20);font-weight: 900;">Kí tên: Tú tương tư</h3>
 
